# PAOO

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp
src/QualityEmployee/: CMakeLists.txt  qualityEmployee.cpp  qualityEmployee.hpp
